# Software_Engineering_Lab

./: .envrc  flake.nix  pyproject.toml
code_for_me_to_test/: basic_class.py  object_track.py  object_track3-1.py  object_track3.py  object_tract2.py
half_life2_agent/test_development/path_planning_based_on_vision/: EnhancedDecisionNetwork.py  controller.py  controller_for_test.py  controller_for_test_slam_ver.py  controller_for_test_slam_with_control_tree_ver.py  controller_for_test_slam_with_decision_tree_and_nn.py  controller_for_test_ver2.py  controller_for_test_without_memory.py  decision_tree_and_nn.py  decision_tree_for_test_slam_with_control_tree_ver.py  log_system.py  main.py  main_for_test.py  main_for_test_slam_ver.py  main_for_test_slam_with_control_tree_ver.py  main_for_test_slam_with_decision_tree_and_nn.py  main_for_test_ver2.py  main_for_test_without_memory.py  memory.py  memory_for_test.py  memory_for_test_slam_ver.py  memory_for_test_slam_with_control_tree_ver.py  memory_for_test_slam_with_decision_tree_and_nn.py  memory_for_test_ver2.py  planner.py  planner_for_test.py  planner_for_test_slam_with_control_tree_ver.py  planner_for_test_ver2.py  planner_for_test_without_memory.py  vision.py  vision_for_test.py  vision_for_test_slam_with_decision_tree_and_nn.py  vision_for_test_slam_with_decision_tree_and_nn_test.py  vision_for_test_ver2.py  vision_for_test_without_memory.py
half_life2_agent/test_model/: README.dataset.txt  README.roboflow.txt  camera_predict.py  data_2.yaml  yolo-interface.py
half_life2_agent/test_model/train/: labels.cache
(+222 files in other folders)
