[project]
name = "software-engineering-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lap>=0.5.12",
    "neo4j>=5.28.1",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pyautogui>=0.9.54",
    "pydirectinput>=1.0.4",
    "ultralytics>=8.3.146",
]

[dependency-groups]
dev = ["ipython>=9.2.0", "ptpython>=3.0.30"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["./code_for_me_to_test", "./half_life2_agent"]
